2013-08-05 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved bug, where combination pdf category was out of sync with combination data
	* Added more print statements and fixed naming-problems
	
2013-07-25 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/sample.py
	M       python/systematic.py
	* Possibility to different nominal tree for systematics evaluation.
	* Use ala:
	jes       = Systematic("JES",    "_NoSys", "_JESup"    ,"_JESdown"    ,"tree","overallNormHistoSys") # JES uncertainty - for low pt jets
        jes.differentNominalTreeWeight = True 
	* Tagging HistFitter-00-00-30 


2012-12-05 Alex Koutsman <alex.koutsman@cern.ch>
	M 	Utils.cxx
	* Fixed the NLL plotting for Inf/NaN-error and wrong range setting.
	
2013-06-18 Max Baak <mbaak@cern.ch>
	M       src/ChannelStyle.cxx
	M       src/ChannelStyle.h
	M       configManager.py
	M       channel.py
	* Option to add text lines to plots.
	M	setup.sh
	M 	Utils.cxx (Alex Koutsman)
	* Fix of Roofit VisualizeError bug, see:
	* https://groups.cern.ch/group/hn-atlas-physics-Statistics/Lists/Archive/DispForm.aspx?ID=2070
	* Switch to head of root-5.34-patches branches for fix.
	* Tagging HistFitter-00-00-29

2013-06-12 Max Baak <mbaak@cern.ch>
	* Several minor updates
	M       ChannelStyle.cxx
	M       ValidationUtils.cxx
	M       ValidationUtils.h
        M       HistFitter.py
        M       prepareHistos.py
        M       configManager.py
	* Option to pickup histograms from a backup file. 
	* Use this to run discovery mode, using histograms from background-only mode
	M       fitConfig.py
	M       channel.py
	* Possibility to set luminosity in channelStyle, to be plotted instead of lumi in config file.	
	* (in case of prescaled triggers)

2013-05-29  Zach Marshall <zach.marshall@cern.ch>
	M       src/Utils.cxx
	* Moving to one NLL/PLL plot per canvas (no divide) so that they are
	legible together

2013-05-05 Max Baak <mbaak@cern.ch>